--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1055,25 +1055,43 @@ footer::before {
   position: relative;
 }
 
-.tooltip_top {
+.tooltip {
   position: absolute;
-  top: -100%;
-  left: -70%;
+  bottom: 100%;
+  left: -110%;
+  display: block;
+  padding: 0.5rem;
+  color: black;
   font-size: 12px;
-  visibility: hidden;
-  background-color: rgba(0, 0, 0, 0.7);
+  background: rgba(250, 235, 215, 0.8);
+  border-radius: 5px;
+  opacity: 0;
+  pointer-events: none;
+    
+    -webkit-transform: translateY(10px);
+    -moz-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    -o-transform: translateY(10px);
+    transform: translateY(10px);
+    -webkit-transition: all .25s ease-out;
+    -moz-transition: all .25s ease-out;
+    -ms-transition: all .25s ease-out;
+    -o-transition: all .25s ease-out;
+    transition: all .25s ease-out;
+    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+    -ms-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+    -o-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
 }
 
-.tooltip_bottom {
-  position: absolute;
-  bottom: -100%;
-  left: -70%;
-  font-size: 12px;
-  visibility: hidden;
-  background-color: rgba(0, 0, 0, 0.7);
-}
 
-.extra__wrapper:hover .tooltip_top,
-.extra__wrapper:hover .tooltip_bottom {
-  visibility: visible;
+.extra__wrapper:hover .tooltip {
+  opacity: 1;
+    pointer-events: auto;
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    -o-transform: translateY(0px);
+    transform: translateY(0px);
 }
