--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -467,15 +467,21 @@ figure {
   align-items: center;
   gap: 20px;
   margin: 20px auto;
-  max-width: 55%;
+  max-width: 70%;
 }
 
 #map-container {
-  flex: 1;
-  height: 400px;
-  background-color: #f0f0f035;
-  /* фон для видимости будущей карты */
-  border-radius: 8px;
+  width: 60%;
+}
+
+#map {
+  max-width: 100%;
+  cursor: pointer;
+}
+
+#map:hover {
+  transform: scale(1.01);
+  transition: transform 0.3s ease;
 }
 
 #quote-container {
@@ -927,8 +933,7 @@ figure {
 /* ФУТЕР */
 
 footer {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
+  margin: 2rem 0;
   position: relative;
   display: flex;
   justify-content: space-around;
@@ -1095,3 +1100,4 @@ footer::before {
     -o-transform: translateY(0px);
     transform: translateY(0px);
 }
+
