добавлена кнопка со случайным персонажем

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -315,6 +315,31 @@ h2 {
   transform: scale(0.95);
 }
 
+/*СЛУЧАЙНЫЙ ПЕРСОНАЖ*/
+
+#random {
+  margin-left: 5rem;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 50px;
+  border: none;
+  background: linear-gradient(to right, #cfc09f 0%, #ffecb3 51%, #3a2c0f 100%);
+  transition: 0.5s;
+  background-size: 200% auto;
+}
+
+#random:hover {
+  background-position: right center;
+  color: antiquewhite;
+}
+
+#random:active {
+  transform: scale(0.95);
+}
+
+/*СЛУЧАЙНЫЙ ПЕРСОНАЖ*/
+
 /* КАРТОЧКА ГЕРОЯ */
 .card {
   margin: auto;
